manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learn-eks-sm
  labels:
    istio-injection: enabled
